# PyGeneCrypto

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
PyGeneCrypto/: main.py
